--- a/powerpages.config.json
+++ b/powerpages.config.json
@@ -1,5 +1,5 @@
 {
-  "siteName": "MEA-Fusion SPA",
+  "siteName": "SPA2",
   "defaultLandingPage": "index.html",
   "compiledPath": "./dist",
   "rootPath": "."
